[package]
name = "limit-sarscov2-factors"
version = "2.4.1"
edition = "2025"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
petgraph = "0.6"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

[lib]
name = "sarscov2_factors"
path = "lib.rs"

[[bin]]
name = "sarscov2-graph-builder"
path = "main.rs"
